--- a/css/style2.css
+++ b/css/style2.css
@@ -24,6 +24,12 @@
   font-size: 5.25rem;
 }
 
+fire-text-here {
+  color: rgb(103, 241, 140);
+  font-family: "Times New Roman", Times, monospace;
+  font-size: 6.25rem;
+}
+
 body {
   background-color: rgb(219, 248, 250);
 }
