updated index2 and style2

--- a/css/style2.css
+++ b/css/style2.css
@@ -24,8 +24,8 @@
   font-size: 5.25rem;
 }
 
-fire-text-here {
-  color: rgb(103, 241, 140);
+.bible-quote {
+  color: rgb(49, 115, 66);
   font-family: "Times New Roman", Times, monospace;
   font-size: 6.25rem;
 }
